# adk-a2a-gemini

./: .env.example  .gitignore  README.md  complete_setup_script.py  config.py  create_project_structure.py  pyproject.toml  requirements.txt  setup.py
agents/elevenlabs_agent/: __main__.py  agent.py  executor.py  prompt.py
agents/host_agent/: __main__.py  agent.py  executor.py  prompt.py  tools.py
agents/notion_agent/: __main__.py  agent.py  executor.py  prompt.py
core/: base_agent.py  mcp_tools.py
scripts/: install_deps.py  setup_project.py  start_agents.py  test_setup.py
tests/: test_agents.py  test_integration.py  test_mcp.py
ui/: streamlit_app.py
ui/components/: chat.py
